--- a/src/index.css
+++ b/src/index.css
@@ -1,122 +1,4 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-.app-container {
-  background: #fff;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  max-width: 600px;
-}
-.add-task{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-h1 {
-  font-size: 24px;
-  margin-bottom: 20px;
-  color: #333;
-  text-align: center;
-}
-
-input[type="text"] {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  min-height: 15px;
-  min-width: 200px;
-  width: 100%;
-}
-.task-text{
-  min-width: 250px;
-}
-button {
-  padding: 10px;
-  margin: 5px;
-  border: none;
-  border-radius: 4px;
-  background-color: #007bff;
-  color: white;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #0056b3;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-li {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px;
-  border-bottom: 1px solid #eee;
-}
-
-label {
-  display: flex;
-  align-items: center;
-  width: 100%;
-}
-
-input[type="checkbox"] {
-  margin-right: 10px;
-}
-
-button.edit {
-  background-color: #ffc107;
-}
-
-button.edit:hover {
-  background-color: #e0a800;
-}
-
-button.delete {
-  background-color: #dc3545;
-}
-
-button.delete:hover {
-  background-color: #c82333;
-}
-
-
-.color-select {
-  display: flex;
-  justify-content: space-between;
-  margin-left: 10px;
-}
-
-.color-select label {
-  display: flex;
-  align-items: center;
-  margin-right: 10px;
-}
-
-.color-select input[type="checkbox"] {
-  margin-right: 5px;
-}
-
-.task-text.red {
-  color: red;
-}
-
-.task-text.green {
-  color: green;}
-
-.task-text.blue {
-  color: blue;
-}
+/* src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
